1999-04-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (jv_FIND_JDK): Use simply the japhar datadir instead of
	datadir/classes.zip.  Add test for kaffe class and include file
	locations.  Substitute java, japhar, or kaffe to JAVA.

1999-03-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Add check for japhar's JNI include files.
	Add JAVACLASSES substitution.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Don't substitute JAR or go out of the
	way to set JAVAC.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Move AC_MSG_CHECKING after potential
	calls to AC_PATH_PROG.

1999-03-17  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Use AC_PATH_PROG to locate javac
	only if jdkdir is not specified to avoid problems with multiple
	JDK versions and path ordering.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (ffilibdir): New substituted variable.  Use
	'-I${ffidir}/include' instead of $ffidir/includ.

	* acfind.m4 (md_FIND_LIB): Use -R instead of -rpath.

	* acffi.m4 (md_FIND_FFI): Likewise.

	* actcltk.m4 (md_FIND_TCL_LIBRARIES, md_FIND_TK_LIBRARIES): Likewise.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Assign java include directories
	to JAVAINCLUDES.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Define HAVE_JDK if jdkdir is found to be valid.

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Don't abort if JDK not found.
	Abort if $jdkdir is specified (but not `no') and
	$jdkdir/include/jni.h doesn't exist.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Set JAVAC if javac is missing, and jdkdir is not.
	Likewise for jar.

	* Makefile.am (EXTRA_DIST): Add acwarnflags.m4.

	* acwarnflags.m4: New file.

1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
