@@ -1,3 +1,7 @@
+1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acjdk.m4: Add JAR and JAR_HOME substitutions.
+
 1999-04-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4 (jv_FIND_JDK): Use simply the japhar datadir instead of
